@@ -57,7 +57,7 @@ package com.projectlibre1.pm.task;
 
 import java.lang.reflect.InvocationTargetException;
 import java.text.MessageFormat;
-import java.util.ArrayList;
+import java.util.Vector;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -159,7 +159,7 @@ public class ProjectFactory {
 				if (((Boolean)SessionFactory.callNoEx(session,"isLocalAccess",null,null)).booleanValue())
 					resources=(List)SessionFactory.call(session,"retrieveResourceHierarchy",null,null);
 				else{
-					resources=new ArrayList();
+					resources=new Vector();
 
 					Job job=(Job)SessionFactory.callNoEx(session,"getLoadResourceHierarchyJob", new Class[]{boolean.class,List.class},new Object[]{true,resources});
 					job.addSync();
@@ -234,7 +234,7 @@ public class ProjectFactory {
     	ProjectFactory.getInstance().getPortfolio().forProjects(new Closure(){
     		public void execute(Object impl) {
     			Project project=(Project)impl;
-        		projectIds.add(new Long(project.getUniqueId()));
+        		projectIds.add(Long.valueOf(project.getUniqueId()));
     		}
     	});
     	projectIds.addAll(loadingProjects);
@@ -242,19 +242,19 @@ public class ProjectFactory {
     	return projectIds;
 	}
 	public synchronized void addLoadingProject(long id){
-		loadingProjects.add(new Long(id));
+		loadingProjects.add(Long.valueOf(id));
 	}
 	public synchronized void removeLoadingProject(long id){
-		loadingProjects.remove(new Long(id));
+		loadingProjects.remove(Long.valueOf(id));
 	}
 	public synchronized void addClosingProjects(Collection ids){
 		closingProjects.addAll(ids);
 	}
 	public synchronized void addClosingProject(long id){
-		closingProjects.add(new Long(id));
+		closingProjects.add(Long.valueOf(id));
 	}
 	public synchronized void removeClosingProject(long id){
-		closingProjects.remove(new Long(id));
+		closingProjects.remove(Long.valueOf(id));
 	}
 
 
@@ -391,7 +391,7 @@ public class ProjectFactory {
 
 	public Job getSaveProjectJob(final Project project, final SaveOptions opt){
 		// Save the project and all of its subprojects
-		final List projects=new ArrayList();
+		final List projects=new Vector();
 		DeepChildWalker.recursivelyTreatBranch(portfolio.getNodeModel(), project,  new Closure() {
 			boolean dirty=false;
 			public void execute(Object arg0) {
@@ -434,7 +434,7 @@ public class ProjectFactory {
 
 	public Job getCloseProjectsOnServerJob(Project project){
 		// Save the project and all of its subprojects
-		final List projects=new ArrayList();
+		final List projects=new Vector();
 		DeepChildWalker.recursivelyTreatBranch(portfolio.getNodeModel(), project,  new Closure() {
 			public void execute(Object arg0) {
 				Object impl = ((Node)arg0).getImpl();
@@ -453,8 +453,8 @@ public class ProjectFactory {
 
 
 	public Job getCloseProjectsOnServerJob(Collection projects) {
-		List<Project> localProjects=new ArrayList<Project>();
-		List<Project> serverProjects=new ArrayList<Project>();
+		List<Project> localProjects=new Vector<Project>();
+		List<Project> serverProjects=new Vector<Project>();
 		for (Project project : (Collection<Project>)projects) {
 			if (project.isReadOnly()) continue;
 			if (project.isLocal()) localProjects.add(project);
@@ -525,8 +525,8 @@ public class ProjectFactory {
 				return null;
 		}
 
-		final ArrayList toRemove = new ArrayList();
-		final ArrayList projects=new ArrayList();
+		final Vector toRemove = new Vector();
+		final Vector projects=new Vector();
 		DeepChildWalker.recursivelyTreatBranch(portfolio.getNodeModel(), project,  new Closure() {
 			public void execute(Object arg0) {
 				Node node = (Node)arg0;
